--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,65 @@
 .read-the-docs {
   color: #888;
 }
+
+/* ---------------------------------------- */
+.header {
+  font-weight: bold;
+  font-size: large;
+  align-content: center;
+  border: solid 2px black;
+}
+
+.container {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+h2 {
+  text-align: left;
+  margin-bottom: 5px;
+  margin-top: 10px;
+  margin-right: 275px;
+  font-size: 13px;
+}
+
+input {
+  width: 300px;
+  justify-content: center;
+}
+
+.password {
+  text-align: left;
+  margin-bottom: 5px;
+  margin-top: 10px;
+  margin-right: 256px;
+  font-size: 13px;
+}
+
+.confirmation-password {
+  text-align: left;
+  margin-bottom: 5px;
+  margin-top: 10px;
+  margin-right: 170px;
+  font-size: 13px;
+}
+
+.btn {
+  width: 307px;
+  justify-content: center;
+  background-color: #574dcc;
+  color: white;
+  margin-top: 50px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+footer {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  padding: 10px 0;
+  margin-top: 200px;
+}
